feat(xp/streak): add xp and streak logiv